--- a/src/main/resources/generator/html/index.html
+++ b/src/main/resources/generator/html/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <title>Übersicht - Datenkatalog</title>
+    <title>Überblick - Datenkatalog</title>
     <meta charset="UTF-8">
     <meta name="date" content="2015-12-05"/>
-    <meta name="keywords" content="Übersicht, Datenkatalog, NERZ, ERZ, VRZ, UZ, Verkehrsrechnerzentrale, Unterzentrale">
+    <meta name="keywords" content="Überblick, Datenkatalog, NERZ, ERZ, VRZ, UZ, Verkehrsrechnerzentrale, Unterzentrale">
 </head>
 <frameset cols="20%,80%" title="Documentation frame">
     <frameset rows="30%,70%" title="Left frames">
