--- a/src/main/resources/generator/html/index.html
+++ b/src/main/resources/generator/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <title>Überblick - Datenkatalog</title>
+    <title>Überblick</title>
     <meta charset="UTF-8">
     <meta name="date" content="2015-12-05"/>
     <meta name="keywords" content="Überblick, Datenkatalog, NERZ, ERZ, VRZ, UZ, Verkehrsrechnerzentrale, Unterzentrale">
